2005-09-22  Naba Kumar  <naba@gnome.org>

	Patch from: Erwin Rol <mailinglists@erwinrol.com>
	* gdl/gdl-combo-button.c, gdl/gdl-combo-button.h,
	gdl/gdl-dock-bar.c, gdl/gdl-dock-bar.h,
	gdl/gdl-dock-layout.c, gdl/gdl-dock-layout.h,
	gdl/gdl-dock-master.c, gdl/gdl-dock-master.h,
	gdl/gdl-dock-notebook.c, gdl/gdl-dock-notebook.h,
	gdl/gdl-dock-object.c, gdl/gdl-dock-object.h,
	gdl/gdl-dock-paned.c, gdl/gdl-dock-paned.h,
	gdl/gdl-dock-placeholder.c, gdl/gdl-dock-placeholder.h,
	gdl/gdl-dock-tablabel.c, gdl/gdl-dock-tablabel.h,
	gdl/gdl-dock.c, gdl/gdl-dock.h,
	gdl/gdl-icons.c, gdl/gdl-stock.c,
	gdl/gdl-stock.h, gdl/gdl-tools.c,
	gdl/gdl-tools.h: Converted lisense to LGPL from GPL, bug #316850.
	Authors approvals:
	http://sourceforge.net/mailarchive/message.php?msg_id=13015638
	http://sourceforge.net/mailarchive/message.php?msg_id=13020424
	http://sourceforge.net/mailarchive/message.php?msg_id=13015024

2005-08-31  Naba Kumar  <naba@gnome.org>

	* configure.in, gdl.spec.in, gdl-1.0.pc.in: Restored
	libbonoboui dependency. Fixed bug #314367.
	
2005-08-24  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-07-27  Naba Kumar  <naba@gnome.org>

	* configure.in,	gdl-1.0.pc.in, gdl.spec.in: Removed libbonobo dep.

2005-07-06  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gdl/gdl-dock-master.c: (foreach_lock_unlock),
	(gdl_dock_master_lock_unlock):
	* gdl/gdl-dock-object.c: (gdl_dock_object_real_detach):
	* gdl/gdl-dock-placeholder.c: (gdl_dock_placeholder_set_property): use
	GINT_TO_POINTER instead of casting an int directly to a gpointer. Fixes
	compilation with gcc4.

=== GDL 0.6.0 ===

2005-06-27  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumpped version to 0.6.0
	* NEWS: Updated.

2005-06-23  Naba Kumar  <naba@gnome.org>

	* gdl/gdl-dock-layout.c: gcc4 compile fixes. Patch from
	David Malcolm  <dmalcolm@redhat.com>.

2005-03-20  Naba Kumar  <naba@gnome.org>
